--- a/recipez/package.json
+++ b/recipez/package.json
@@ -13,11 +13,13 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.3",
     "@next/font": "13.1.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "babel": "^6.23.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5"
   }
 }
